--- a/AcademicPlus/AcademicPlus.csproj
+++ b/AcademicPlus/AcademicPlus.csproj
@@ -11,6 +11,24 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>C:\Users\Davi\Desktop\AcademicPlus\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>true</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <UpdateUrl>https://davi19-19.000webhostapp.com/AcademicPlus/</UpdateUrl>
+    <ApplicationRevision>2</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <CreateDesktopShortcut>true</CreateDesktopShortcut>
+    <PublishWizardCompleted>true</PublishWizardCompleted>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,6 +51,18 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Logo_Academic.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>F5B1A3FC8DE57AB8F29D65E458784EF7670BE52B</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>AcademicPlus_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>true</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.ReportViewer.Common, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
@@ -159,6 +189,20 @@
     <Compile Include="Pagamentos.Designer.cs">
       <DependentUpon>Pagamentos.cs</DependentUpon>
     </Compile>
+    <Compile Include="PagamentoTotal.cs">
+      <DependentUpon>PagamentoTotal.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="PagamentoTotal.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PagamentoTotal.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="PeriodoRelatorio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PeriodoRelatorio.Designer.cs">
+      <DependentUpon>PeriodoRelatorio.cs</DependentUpon>
+    </Compile>
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -205,6 +249,9 @@
     <EmbeddedResource Include="Pagamentos.resx">
       <DependentUpon>Pagamentos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PeriodoRelatorio.resx">
+      <DependentUpon>PeriodoRelatorio.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Principal.resx">
       <DependentUpon>Principal.cs</DependentUpon>
     </EmbeddedResource>
@@ -230,6 +277,7 @@
     <Content Include="alunos.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="AcademicPlus_TemporaryKey.pfx" />
     <None Include="alunos.xsc">
       <DependentUpon>alunos.xsd</DependentUpon>
     </None>
@@ -242,6 +290,21 @@
       <DependentUpon>alunos.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
+    <EmbeddedResource Include="PagamentoAluno.rdlc" />
+    <Content Include="Pagamentototal.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="PagamentoTotal.xsc">
+      <DependentUpon>PagamentoTotal.xsd</DependentUpon>
+    </None>
+    <None Include="PagamentoTotal.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>PagamentoTotal.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="PagamentoTotal.xss">
+      <DependentUpon>PagamentoTotal.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -277,6 +340,18 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Resources\Logo_Academic.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 e x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
